# AgentPlayGround

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
src/: cli.py  exceptions.py  logger.py  main.py  server.py
src/agent/: action_executer.py  agent.py  api.py  llm_runner.py  parser.py  state.py
src/agent/executor/: executor_prompt.py  step_executor.py
src/agent/planner/: models.py  planner.py  planner_prompt.py
src/agent/tools/: base.py  python_executor.py  web_search.py
src/core/: config.py
src/llm/: api.py  chat_engine.py  openrouter.py  parser.py  prompt.py  structure.py  utils.py
src/llm/prompts/: executor.txt  planner.txt
src/memory/: json_memory.py  memory_manager.py
src/tests/: test_agent.py  test_memory.py  test_parser.py  test_tools.py
