[project]
name = "code-pilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncio>=4.0.0",
    "fastapi>=0.136.3",
    "python-dotenv>=1.2.2",
    "python-env>=1.0.0",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "ruff>=0.15.18",
    "tavily>=1.1.0",
    "uvicorn>=0.48.0",
]
[tool.setuptools]
package-dir = {"" = "src"}
